test/good/03-var-assing.mac



int main() {
    int a, b = 7;
    a = 7;
    a = b;
    a = 5 + 2;
}