test/bad/12-add-type-mismatch.mac


int main() {
    string a = "hello" + 5;
    return 0;
}